src/frameworks/enterprise/main/objects/AsyncWorkerEvent__e/AsyncWorkerEvent__e.object-meta.xml
<CustomObject>
    <description>Keeps track of references to original records when archiving, deletion dates, error messages etc.</description>
    <label>Async Worker Event</label>
    <pluralLabel>Async Worker Events</pluralLabel>
</CustomObject>