src/frameworks/enterprise/main/objects/AsyncWorkerEvent__e/fields/ClassType__c.field-meta.xml
<CustomField>
    <fullName>ClassType__c</fullName>
    <description>The Apex type to instantiate using Type.forName().newInstance()</description>
    <label>Class Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>