src/frameworks/enterprise/main/objects/AsyncWorkerEvent__e/fields/CurrentLockRetryAttempts__c.field-meta.xml
<CustomField>
    <fullName>CurrentLockRetryAttempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tracks the number of times this async worker has been re-enqueued due to unrecoverable locking errors</description>
    <label>Current Lock Retry Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>