src/frameworks/enterprise/main/objects/AsyncWorkerEvent__e/fields/MaxNumberRetries__c.field-meta.xml
<CustomField>
    <fullName>MaxNumberRetries__c</fullName>
    <description>The maximum number of retry attempts for this worker before it permanently fails.</description>
    <label>Max Number of Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>