src/frameworks/enterprise/main/objects/AsyncWorkerEvent__e/fields/RequiresCallouts__c.field-meta.xml
<CustomField>
    <fullName>RequiresCallouts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Callouts</label>
    <type>Checkbox</type>
</CustomField>